# simple-direct-chat

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/src/: main.cpp
Server/: CMakeLists.txt
Server/include/: Server.h  Session.h
Server/src/: Server.cpp  Session.cpp  main.cpp
